Working 1.21.5 on Fabric TODO: Fix Neo, MCForge, CFBH; custom models on neo and forge