@@ -5,11 +5,11 @@ import com.unlikepaladin.pfm.blocks.models.ModelHelper;
 import com.unlikepaladin.pfm.blocks.models.fabric.PFMFabricBakedModel;
 import net.fabricmc.fabric.api.renderer.v1.mesh.QuadEmitter;
 import net.minecraft.block.BlockState;
-import net.minecraft.client.render.model.BakedModel;
-import net.minecraft.client.render.model.BakedQuad;
+import net.minecraft.client.render.model.BlockModelPart;
+import net.minecraft.client.render.model.BlockStateModel;
 import net.minecraft.client.render.model.ModelBakeSettings;
+import net.minecraft.client.render.model.ModelSettings;
 import net.minecraft.client.texture.Sprite;
-import net.minecraft.item.ItemStack;
 import net.minecraft.util.math.BlockPos;
 import net.minecraft.util.math.Direction;
 import net.minecraft.world.BlockRenderView;
@@ -19,11 +19,10 @@ import net.minecraft.util.math.random.Random;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.function.Predicate;
-import java.util.function.Supplier;
 
 public class FabricChairModernModel extends PFMFabricBakedModel {
-    public FabricChairModernModel(ModelBakeSettings settings, List<BakedModel> bakedModels) {
-        super(settings, bakedModels);
+    public FabricChairModernModel(ModelBakeSettings settings, ModelSettings modelSettings, List<BlockModelPart> bakedModels) {
+        super(settings, modelSettings, bakedModels);
     }
 
     @Override
@@ -32,28 +31,23 @@ public class FabricChairModernModel extends PFMFabricBakedModel {
     }
 
     @Override
-    public boolean isVanillaAdapter() {
-        return false;
-    }
-
-    @Override
-    public void emitBlockQuads(QuadEmitter context, BlockRenderView blockView, BlockState state, BlockPos pos, Supplier<Random> randomSupplier, Predicate<@Nullable Direction> cullTest) {
+    public void emitQuads(QuadEmitter context, BlockRenderView blockView, BlockPos pos, BlockState state, Random random, Predicate<@Nullable Direction> cullTest) {
         if (state.getBlock() instanceof ModernChairBlock) {
             List<Sprite> spriteList = getSpriteList(state);
             pushTextureTransform(context, ModelHelper.getOakPlankLogSprites(), spriteList);
             int tucked = state.get(ModernChairBlock.TUCKED) ? 1 : 0;
-            getTemplateBakedModels().get(tucked).emitBlockQuads(context, blockView, state, pos, randomSupplier, cullTest);
+            getTemplateBakedModels().get(tucked).emitQuads(context, cullTest);
             context.popTransform();
         }
     }
 
     @Override
-    public void emitItemQuads(QuadEmitter context, Supplier<Random> randomSupplier) {
+    public void emitItemQuads(QuadEmitter context, Random randomSupplier) {
         if (blockState == null) return;
-
+        Predicate<Direction> anyPredicate = d -> false;
         List<Sprite> spriteList = getSpriteList(blockState);
         pushTextureTransform(context, ModelHelper.getOakPlankLogSprites(), spriteList);
-        getTemplateBakedModels().get(0).emitItemQuads(context, randomSupplier);
+        getTemplateBakedModels().getFirst().emitQuads(context, anyPredicate);
         context.popTransform();
     }
 }
